--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.1.1",
+		"@material-tailwind/react": "^2.1.9",
+		"next": "14.1.1",
 		"react": "^18",
-		"react-dom": "^18",
-		"next": "14.1.1"
+		"react-dom": "^18"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.0.1",
