--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-	"name": "noon-website-clone",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
-	},
-	"dependencies": {
-		"@heroicons/react": "^2.1.1",
-		"@material-tailwind/react": "^2.1.9",
-		"next": "14.1.1",
-		"react": "^18",
-		"react-dom": "^18"
-	},
-	"devDependencies": {
-		"autoprefixer": "^10.0.1",
-		"postcss": "^8",
-		"tailwindcss": "^3.3.0"
-	}
+  "name": "noon-website-clone",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.9",
+    "next": "14.1.1",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
