--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.13",
+    "expo": "^44.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.5",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
