--- a/website/package.json
+++ b/website/package.json
@@ -12,11 +12,12 @@
 		"@headlessui/react": "^1.7.18",
 		"@heroicons/react": "^2.1.1",
 		"@material-tailwind/react": "^2.1.9",
+		"mongodb": "^6.5.0",
 		"next": "14.1.1",
 		"react": "^18",
 		"react-dom": "^18",
-		"use-react-countries": "^2.0.0",
-		"swiper": "^11.0.7"
+		"swiper": "^11.0.7",
+		"use-react-countries": "^2.0.0"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.0.1",
