--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@expo/webpack-config": "^19.0.0",
     "expo": "^49.0.23",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -17,9 +18,9 @@
     "react-native": "0.73.5",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
-    "@expo/webpack-config": "^19.0.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
