--- a/website/package.json
+++ b/website/package.json
@@ -12,8 +12,11 @@
 		"@headlessui/react": "^1.7.18",
 		"@heroicons/react": "^2.1.1",
 		"@material-tailwind/react": "^2.1.9",
+		"bcryptjs": "^2.4.3",
 		"mongodb": "^6.5.0",
+		"mongoose": "^8.2.3",
 		"next": "14.1.1",
+		"next-auth": "^4.24.7",
 		"react": "^18",
 		"react-dom": "^18",
 		"swiper": "^11.0.7",
