Implement log in functionality

--- a/website/.env
+++ b/website/.env
@@ -1,1 +1,4 @@
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="team5"
+
 MONGO_URL=mongodb+srv://ahmediramadan01:team5@cluster.g1pbl8a.mongodb.net/
