--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
 		"next-auth": "^4.24.7",
 		"react": "^18",
 		"react-dom": "^18",
+		"stripe": "^14.24.0",
 		"swiper": "^11.0.7",
 		"use-react-countries": "^2.0.0"
 	},
